--- a/sdk/arizeaiobservabilityeval/ci.mgmt.yml
+++ b/sdk/arizeaiobservabilityeval/ci.mgmt.yml
@@ -11,14 +11,13 @@ pr:
     - release/*
   paths:
     include:
-    - sdk/liftrarize/ci.mgmt.yml
-    - sdk/liftrarize/Azure.ResourceManager.ArizeAIObservabilityEval/
-
+    - sdk/arizeaiobservabilityeval/ci.mgmt.yml
+    - sdk/arizeaiobservabilityeval/Azure.ResourceManager.ArizeAIObservabilityEval
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
-    ServiceDirectory: liftrarize
+    ServiceDirectory: arizeaiobservabilityeval
     LimitForPullRequest: true
     Artifacts:
     - name: Azure.ResourceManager.ArizeAIObservabilityEval
