--- a/sdk/weightsandbiases/ci.mgmt.yml
+++ b/sdk/weightsandbiases/ci.mgmt.yml
@@ -1,7 +1,6 @@
 # NOTE: Please refer to https://aka.ms/azsdk/engsys/ci-yaml before editing this file.
 
 trigger: none
-
 pr:
   branches:
     include:
@@ -11,14 +10,13 @@ pr:
     - release/*
   paths:
     include:
-    - sdk/liftrweightsandbiases/ci.mgmt.yml
-    - sdk/liftrweightsandbiases/Azure.ResourceManager.WeightsAndBiases/
-
+    - sdk/weightsandbiases/ci.mgmt.yml
+    - sdk/weightsandbiases/Azure.ResourceManager.WeightsAndBiases/
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
-    ServiceDirectory: liftrweightsandbiases
+    ServiceDirectory: weightsandbiases
     LimitForPullRequest: true
     Artifacts:
     - name: Azure.ResourceManager.WeightsAndBiases
