--- a/sdk/lambdatesthyperexecute/ci.mgmt.yml
+++ b/sdk/lambdatesthyperexecute/ci.mgmt.yml
@@ -1,7 +1,6 @@
 # NOTE: Please refer to https://aka.ms/azsdk/engsys/ci-yaml before editing this file.
 
 trigger: none
-
 pr:
   branches:
     include:
@@ -11,14 +10,13 @@ pr:
     - release/*
   paths:
     include:
-    - sdk/liftrhyperexecute/ci.mgmt.yml
-    - sdk/liftrhyperexecute/Azure.ResourceManager.LambdaTestHyperExecute/
-
+    - sdk/lambdatesthyperexecute/ci.mgmt.yml
+    - sdk/lambdatesthyperexecute/Azure.ResourceManager.LambdaTestHyperExecute/
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
-    ServiceDirectory: liftrhyperexecute
+    ServiceDirectory: lambdatesthyperexecute
     LimitForPullRequest: true
     Artifacts:
     - name: Azure.ResourceManager.LambdaTestHyperExecute
