--- a/eng/packages/http-client-csharp/ci.yml
+++ b/eng/packages/http-client-csharp/ci.yml
@@ -35,8 +35,8 @@ parameters:
     displayName: "Regenerate clients"
     type: boolean
     default: false
-  - name: HasNugetPackages
-    displayName: "Has NuGet packages"
+  - name: PublishNugetPackages
+    displayName: "Publish NuGet package artifacts"
     type: boolean
     default: false
 
@@ -57,7 +57,7 @@ extends:
       ${{ if eq(variables['Build.Reason'], 'Manual') }}:
         ShouldPublish: ${{ parameters.ShouldPublish }}
         ShouldRegenerate: ${{ parameters.ShouldRegenerate }}
-        HasNugetPackages: ${{ parameters.HasNugetPackages }}
+        HasNugetPackages: ${{ parameters.PublishNugetPackages }}
         ${{ if startswith(variables['Build.SourceBranch'], 'refs/pull/') }}:  # PR ref's can't be published to public, even in a manual run
           PublishPublic: false
           PublishDependsOnTest: false
