update azure core to use new analyzers and scm and update shared source

--- a/sdk/core/Azure.Core.Experimental/src/Azure.Core.Experimental.csproj
+++ b/sdk/core/Azure.Core.Experimental/src/Azure.Core.Experimental.csproj
@@ -11,7 +11,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Core" />
+    <!-- Should be swapped back to package reference after Azure.Core 1.46 goes live -->
+    <!--<PackageReference Include="Azure.Core" />-->
+    <ProjectReference Include="..\..\Azure.Core\src\Azure.Core.csproj" />
     <PackageReference Include="Microsoft.CSharp" />
   </ItemGroup>
 
