--- a/eng/packages/http-client-csharp-mgmt/generator/TestProjects/Local/Mgmt-TypeSpec/Configuration.json
+++ b/eng/packages/http-client-csharp-mgmt/generator/TestProjects/Local/Mgmt-TypeSpec/Configuration.json
@@ -1,5 +1,6 @@
 {
   "package-name": "MgmtTypeSpec",
+  "model-namespace": true,
   "license": {
     "name": "MIT License",
     "company": "Microsoft Corporation",
