--- a/sdk/core/ci.yml
+++ b/sdk/core/ci.yml
@@ -46,11 +46,7 @@ extends:
       safeName: AzureCore
       triggeringPaths:
       - /sdk/resourcemanager/
-      - /eng/Versioning.targets
-      - /eng/Packages.Data.props
-      - /eng/Directory.Build.Common.props
-      - /eng/Directory.Build.Common.targets
-      - /eng/service.proj
+      - /eng/
 
     - name: Azure.Core.Experimental
       safeName: AzureCoreExperimental
