Apply suggestions from code review
Co-authored-by: Jesse Squire <jesse.squire@gmail.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -904,10 +904,10 @@
 # ServiceOwners:                                                   @yanjungao718
 
 # PRLabel: %Tables
-/sdk/tables/                                                       @christothes
+/sdk/tables/                                                       @christothes @jorgerangel-msft
 
 # ServiceLabel: %Tables
-# AzureSdkOwners:                                                  @christothes
+# AzureSdkOwners:                                                  @christothes @jorgerangel-msft
 # ServiceOwners:                                                   @sakash279 @sivethe @ThomasWeiss @PaulCheng
 
 # PRLabel: %TimeSeriesInsights
