--- a/sdk/onlineexperimentation/Azure.ResourceManager.OnlineExperimentation/tsp-location.yaml
+++ b/sdk/onlineexperimentation/Azure.ResourceManager.OnlineExperimentation/tsp-location.yaml
@@ -1,3 +1,3 @@
-directory: specification/onlineexperimentation/TypeSpecDirectory
-commit: CommitId
+directory: specification/onlineexperimentation/OnlineExperimentation.Management
+commit: 2b341fca86a5d4ff863d88084e358cacd7b4e904
 repo: Azure/azure-rest-api-specs
