--- a/eng/Packages.Data.props
+++ b/eng/Packages.Data.props
@@ -86,7 +86,7 @@
 
     <!-- BCL packages -->
     <PackageReference Update="System.Buffers" Version="4.5.1" />
-    <PackageReference Update="System.ClientModel" Version="1.3.0" />
+    <PackageReference Update="System.ClientModel" Version="1.4.0-beta.5" />
     <PackageReference Update="System.IO.Hashing" Version="6.0.0" />
     <PackageReference Update="System.Memory" Version="4.5.5" />
     <PackageReference Update="System.Memory.Data" Version="6.0.1" />
@@ -207,7 +207,7 @@
 
   <ItemGroup Condition="'$(IsGeneratorLibrary)' == 'true'">
     <PackageReference Update="Microsoft.TypeSpec.Generator.ClientModel" Version="1.0.0-alpha.20250421.4" />
-    <PackageReference Update="System.ClientModel" Version="1.3.0" />
+    <PackageReference Update="System.ClientModel" Version="1.4.0-beta.5" />
   </ItemGroup>
 
   <!--
@@ -409,7 +409,7 @@
     <PackageReference Update="Polly.Contrib.WaitAndRetry" Version="1.1.1" />
     <PackageReference Update="Portable.BouncyCastle" Version="1.9.0" />
     <PackageReference Update="PublicApiGenerator" Version="10.0.1" />
-    <PackageReference Update="System.ClientModel" Version="1.3.0" />
+    <PackageReference Update="System.ClientModel" Version="1.4.0-beta.5" />
     <PackageReference Update="System.Diagnostics.TraceSource" Version="4.3.0" />
     <PackageReference Update="System.IO.Compression" Version="4.3.0" />
     <PackageReference Update="System.IO.Pipelines" Version="4.5.1" />
