--- a/eng/Packages.Data.props
+++ b/eng/Packages.Data.props
@@ -207,7 +207,7 @@
 
   <ItemGroup Condition="'$(IsGeneratorLibrary)' == 'true'">
     <PackageReference Update="Microsoft.TypeSpec.Generator.ClientModel" Version="1.0.0-alpha.20250422.2" />
-    <PackageReference Update="System.ClientModel" Version="1.4.0-beta.5 />
+    <PackageReference Update="System.ClientModel" Version="1.4.0-beta.5" />
   </ItemGroup>
 
   <!--
