--- a/eng/packages/http-client-csharp-mgmt/generator/Azure.Generator.Mgmt/src/Azure.Generator.Mgmt.csproj
+++ b/eng/packages/http-client-csharp-mgmt/generator/Azure.Generator.Mgmt/src/Azure.Generator.Mgmt.csproj
@@ -9,6 +9,7 @@
 		<PackageReference Include="Azure.Core" />
 		<PackageReference Include="Azure.Generator" />
 		<PackageReference Include="Azure.ResourceManager" />
+		<PackageReference Include="Microsoft.TypeSpec.Generator.ClientModel" />
 	</ItemGroup>
 
 	<Target Name="CheckEmitterBuild" BeforeTargets="Build">
