--- a/sdk/eventgrid/Azure.Messaging.EventGrid.Namespaces/tsp-location.yaml
+++ b/sdk/eventgrid/Azure.Messaging.EventGrid.Namespaces/tsp-location.yaml
@@ -1,3 +1,4 @@
 repo: Azure/azure-rest-api-specs
 directory: "specification/eventgrid/Azure.Messaging.EventGrid"
-commit: 462574dbd02088c209bb1da3eef0d93f699e8de2
+commit: 2fceb3a72510cdbeb1dec8b36cb6a0ee709a9876
+emitterPackageJsonPath: "eng/http-client-csharp-emitter-package.json"
