--- a/sdk/confidentialledger/Azure.ResourceManager.ConfidentialLedger/tests/Azure.ResourceManager.ConfidentialLedger.Tests.csproj
+++ b/sdk/confidentialledger/Azure.ResourceManager.ConfidentialLedger/tests/Azure.ResourceManager.ConfidentialLedger.Tests.csproj
@@ -1,4 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <TargetFrameworks>net9.0;net8.0;net6.0;net462</TargetFrameworks>
+  </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\src\Azure.ResourceManager.ConfidentialLedger.csproj" />
   </ItemGroup>
