--- a/eng/packages/http-client-csharp/generator/Azure.Generator/src/Properties/launchSettings.json
+++ b/eng/packages/http-client-csharp/generator/Azure.Generator/src/Properties/launchSettings.json
@@ -31,8 +31,7 @@
       "executablePath": "dotnet"
     },
     "http-encode-bytes": {
-      //"commandLineArgs": "$(SolutionDir)/../dist/generator/Microsoft.TypeSpec.Generator.dll $(SolutionDir)/TestProjects/Spector/http/encode/bytes -g AzureStubGenerator",
-      "commandLineArgs": "$(SolutionDir)/../dist/generator/Microsoft.TypeSpec.Generator.dll $(SolutionDir)/TestProjects/Spector/http/encode/bytes -g AzureClientGenerator -new-project",
+      "commandLineArgs": "$(SolutionDir)/../dist/generator/Microsoft.TypeSpec.Generator.dll $(SolutionDir)/TestProjects/Spector/http/encode/bytes -g AzureStubGenerator",
       "commandName": "Executable",
       "executablePath": "dotnet"
     },
