--- a/sdk/ai/Azure.AI.Projects/tests/Azure.AI.Projects.Tests.csproj
+++ b/sdk/ai/Azure.AI.Projects/tests/Azure.AI.Projects.Tests.csproj
@@ -32,8 +32,8 @@
     <PackageReference Include="Azure.ResourceManager" />
     <PackageReference Include="Azure.ResourceManager.CognitiveServices" />
     <PackageReference Include="Azure.AI.Inference" />
-    <PackageReference Include="Azure.AI.OpenAI" />
-    <PackageReference Include="Azure.Search.Documents" />
+    <PackageReference Include="Azure.AI.OpenAI" VersionOverride="2.2.0-beta.4"/>
+    <PackageReference Include="Azure.Search.Documents" VersionOverride="11.7.0-beta.3" />
   </ItemGroup>
 
 </Project>
