--- a/sdk/core/System.ClientModel/tests/System.ClientModel.Tests.csproj
+++ b/sdk/core/System.ClientModel/tests/System.ClientModel.Tests.csproj
@@ -14,7 +14,7 @@
     <PackageReference Include="NUnit3TestAdapter" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" />
-    <PackageReference Include="Microsoft.Extensions.Primitives" VersionOverride="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Primitives" />
     <PackageReference Include="Polly" />
     <PackageReference Include="System.Memory.Data" VersionOverride="8.0.1" />
   </ItemGroup>
