--- a/sdk/ai/Azure.AI.Projects/tests/Azure.AI.Projects.Tests.csproj
+++ b/sdk/ai/Azure.AI.Projects/tests/Azure.AI.Projects.Tests.csproj
@@ -32,6 +32,7 @@
     <PackageReference Include="Azure.ResourceManager" />
     <PackageReference Include="Azure.ResourceManager.CognitiveServices" />
     <PackageReference Include="Azure.AI.Inference" />
+    <!--TODO: remove VersionOverride https://github.com/Azure/azure-sdk-for-net/issues/49730 -->
     <PackageReference Include="Azure.AI.OpenAI" VersionOverride="2.2.0-beta.4"/>
     <PackageReference Include="Azure.Search.Documents" VersionOverride="11.7.0-beta.3" />
   </ItemGroup>
