Fix merge failures

--- a/sdk/ai/Azure.AI.Projects/tests/Azure.AI.Projects.Tests.csproj
+++ b/sdk/ai/Azure.AI.Projects/tests/Azure.AI.Projects.Tests.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="$(AzureCoreTestFramework)" />
     <ProjectReference Include="..\src\Azure.AI.Projects.csproj" />
+    <ProjectReference Include="..\..\..\openai\Azure.AI.OpenAI\src\Azure.AI.OpenAI.csproj" />
   </ItemGroup>
   
   <ItemGroup>
@@ -33,7 +34,6 @@
     <PackageReference Include="Azure.ResourceManager.CognitiveServices" />
     <PackageReference Include="Azure.AI.Inference" />
     <!--TODO: remove VersionOverride https://github.com/Azure/azure-sdk-for-net/issues/49730 -->
-    <PackageReference Include="Azure.AI.OpenAI" VersionOverride="2.2.0-beta.4"/>
     <PackageReference Include="Azure.Search.Documents" VersionOverride="11.7.0-beta.3" />
   </ItemGroup>
 
