fix folder structure and update resourcemanager's ci.mgmt.yml

--- a/sdk/dell/ci.mgmt.yml
+++ b/sdk/dell/ci.mgmt.yml
@@ -8,8 +8,8 @@ pr:
     - release/*
   paths:
     include:
-    - sdk/dell.storage/ci.mgmt.yml
-    - sdk/dell.storage/Azure.ResourceManager.Dell.Storage/
+    - sdk/dell/ci.mgmt.yml
+    - sdk/dell/Azure.ResourceManager.Dell.Storage/
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
