--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -759,9 +759,6 @@
 # ServiceLabel: %OpenAI
 # ServiceOwners:                                                   @jpalvarezl @trrwilson @ralph-msft
 
-# PRLabel: %Oracle
-/sdk/oracle/Azure.ResourceManager.*/                               @v-mkidane 
-
 # PRLabel: %Image Analysis
 /sdk/vision/Azure.AI.Vision.ImageAnalysis/                         @rhurey @dargilco
 
@@ -1066,6 +1063,12 @@
 
 # ServiceLabel: %Operator Nexus - Network Cloud %Mgmt
 # ServiceOwners:                                                   @Azure/azure-sdk-write-networkcloud
+
+# PRLabel: %Oracle
+/sdk/oracle/Azure.ResourceManager.*/                               @v-mkidane
+
+# ServiceLabel: %Oracle %Mgmt
+# ServiceOwners:                                                   @v-mkidane
 
 # PRLabel: %Pinecone
 /sdk/pineconevectordb/Azure.ResourceManager.*/                     @aggarwalsw
