--- a/sdk/cloudmachine/Azure.Projects/src/Azure.Projects.csproj
+++ b/sdk/cloudmachine/Azure.Projects/src/Azure.Projects.csproj
@@ -9,6 +9,7 @@
     <!-- Disable warning CS1591: Missing XML comment for publicly visible type or member -->
     <NoWarn>CS1591</NoWarn>
     <NoWarn>OPENAI001</NoWarn>
+    <NoWarn>AZC0007</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
