--- a/sdk/cloudmachine/Azure.Projects/src/Azure.Projects.csproj
+++ b/sdk/cloudmachine/Azure.Projects/src/Azure.Projects.csproj
@@ -12,9 +12,11 @@
     <NoWarn>AZC0007</NoWarn>
   </PropertyGroup>
 
+<!-- TODO: TEMP until SCM is released https://github.com/Azure/azure-sdk-for-net/issues/49774 -->
   <ItemGroup>
     <ProjectReference Include="..\..\..\core\System.ClientModel\src\System.ClientModel.csproj" />
   </ItemGroup>
+<!-- ==============================================================-->
 
   <ItemGroup>
     <PackageReference Include="Azure.Data.AppConfiguration" />
