--- a/sdk/datafactory/Azure.ResourceManager.DataFactory/tests/Azure.ResourceManager.DataFactory.Tests.csproj
+++ b/sdk/datafactory/Azure.ResourceManager.DataFactory/tests/Azure.ResourceManager.DataFactory.Tests.csproj
@@ -7,4 +7,13 @@
     <Compile Include="$(TestFrameworkSupportFiles)" LinkBase="Shared\TestFramework" />
     <Compile Include="..\..\..\..\common\ManagementTestShared\Temp\*.cs" LinkBase="TestShared" />
   </ItemGroup>
+  <!-- TEMP until Azure.Core releases with updated dependencies, since these dependencies impact test behavior -->
+  <ItemGroup>
+    <PackageReference Include="System.Memory.Data" />
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" />
+    <PackageReference Include="System.Diagnostics.DiagnosticSource" />
+    <PackageReference Include="System.Text.Encodings.Web" />
+    <PackageReference Include="System.Text.Json" />
+  </ItemGroup>
+  <!-- ======================================================================================================= -->
 </Project>
