--- a/sdk/resourcemanager/ci.mgmt.yml
+++ b/sdk/resourcemanager/ci.mgmt.yml
@@ -213,6 +213,7 @@ trigger:
     - sdk/weightsandbiases/Azure.ResourceManager.WeightsAndBiases
     - sdk/workloadmonitor/Azure.ResourceManager.WorkloadMonitor
     - sdk/workloads/Azure.ResourceManager.Workloads
+    - sdk/mongodbatlas/Azure.ResourceManager.MongoDBAtlas
 
 pr:
   branches:
@@ -428,6 +429,7 @@ pr:
     - sdk/weightsandbiases/Azure.ResourceManager.WeightsAndBiases
     - sdk/workloadmonitor/Azure.ResourceManager.WorkloadMonitor
     - sdk/workloads/Azure.ResourceManager.Workloads
+    - sdk/mongodbatlas/Azure.ResourceManager.MongoDBAtlas
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
