--- a/sdk/openai/Azure.AI.OpenAI/tests/Azure.AI.OpenAI.Tests.csproj
+++ b/sdk/openai/Azure.AI.OpenAI/tests/Azure.AI.OpenAI.Tests.csproj
@@ -24,7 +24,7 @@
       -->
     <PackageReference Include="Newtonsoft.Json" />
     <PackageReference Include="System.ClientModel" />
-    <PackageReference Update="System.ClientModel" VersionOverride="1.4.0-beta.1" />
+    <PackageReference Update="System.ClientModel" />
   </ItemGroup>
 
   <ItemGroup>
