--- a/sdk/managednetworkfabric/Azure.ResourceManager.ManagedNetworkFabric/src/Azure.ResourceManager.ManagedNetworkFabric.csproj
+++ b/sdk/managednetworkfabric/Azure.ResourceManager.ManagedNetworkFabric/src/Azure.ResourceManager.ManagedNetworkFabric.csproj
@@ -1,10 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Version>1.2.0-beta.1</Version>
-    <!--The ApiCompatVersion is managed automatically and should not generally be modified manually.-->
-    <ApiCompatVersion>1.1.2</ApiCompatVersion>
+    <Version>1.0.0-beta.1</Version>
     <PackageId>Azure.ResourceManager.ManagedNetworkFabric</PackageId>
-    <Description>Azure Resource Manager client SDK for Azure resource provider Azure.ResourceManager.ManagedNetworkFabric.</Description>
-    <PackageTags>azure;management;arm;resource manager;azure.resourcemanager.managednetworkfabric</PackageTags>
+    <Description>Azure Resource Manager client SDK for Azure resource provider ManagedNetworkFabric.</Description>
+    <PackageTags>azure;management;arm;resource manager;managednetworkfabric</PackageTags>
   </PropertyGroup>
 </Project>
