--- a/sdk/openai/Azure.AI.OpenAI/tests/Azure.AI.OpenAI.Tests.csproj
+++ b/sdk/openai/Azure.AI.OpenAI/tests/Azure.AI.OpenAI.Tests.csproj
@@ -15,7 +15,7 @@
     <PackageReference Include="NUnit3TestAdapter" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Moq" />
-    
+
     <!--
       Microsoft.NET.Test.Sdk has a transitive dependency to Newtonsoft.Json. In order to pick up the
       right version from Packages.data.props, we need to add an explicit reference to it here.
@@ -24,7 +24,7 @@
       -->
     <PackageReference Include="Newtonsoft.Json" />
     <PackageReference Include="System.ClientModel" />
-    <PackageReference Update="System.ClientModel" VersionOverride="1.4.0-beta.1" />
+    <PackageReference Update="System.ClientModel" VersionOverride="1.5.0-alpha.20250506.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -68,7 +68,7 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-  
+
   <ItemGroup>
     <Compile Include="..\src\Utility\Polyfill\**\*.cs">
       <Link>Utils\Polyfill\%(RecursiveDir)\%(Filename).cs</Link>
